--- a/search/search-arkivskaber.html
+++ b/search/search-arkivskaber.html
@@ -104,9 +104,15 @@
                         id="proveniensnr"
                       />
                     </div>
-                    <div class="col-sm-1 mt-4">
+                    <div class="col-sm-12">
                       <button type="submit" class="btn btn-primary search">
                         Søg
+                      </button>
+                      <button
+                        type="submit"
+                        class="ml-2 btn btn-outline-primary"
+                      >
+                        + Ny arkivskaber
                       </button>
                     </div>
                   </div>
@@ -120,7 +126,7 @@
     <div class="container-fluid mt-3">
       <div class="row">
         <div class="col-10 col-centered">
-          <div class="card bg-white pt-3 pr-5 pl-5 pb-5">
+          <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
             <div class="card-body">
               <h4 class="mb-4 ml-1 mt-3">
                 <span class="font-weight-bold">33</span> resultater
@@ -133,8 +139,8 @@
                 >
                   <thead>
                     <tr>
-                      <th scope="col">Arkivskaber</th>
                       <th scope="col">Præfiks</th>
+                      <th scope="col">Arkivskaber</th>
                       <th scope="col">Fra</th>
                       <th scope="col">Til</th>
                     </tr>
@@ -144,10 +150,10 @@
                       class="clickable-row"
                       data-href="../arkivskaber-open.html"
                     >
-                      <td>Frederiksberg Pol</td>
                       <td>
                         FRB Politi
                       </td>
+                      <td>Frederiksberg Pol</td>
                       <td>1972</td>
                       <td>1988</td>
                     </tr>
@@ -155,10 +161,10 @@
                       class="clickable-row"
                       data-href="../arkivskaber-open.html"
                     >
-                      <td>Frederiksberg Pol</td>
                       <td>
                         FRB Politi
                       </td>
+                      <td>Frederiksberg Pol</td>
                       <td>1972</td>
                       <td>1988</td>
                     </tr>
@@ -166,10 +172,10 @@
                       class="clickable-row"
                       data-href="../arkivskaber-open.html"
                     >
-                      <td>Frederiksberg Pol</td>
                       <td>
                         FRB Politi
                       </td>
+                      <td>Frederiksberg Pol</td>
                       <td>1972</td>
                       <td>1988</td>
                     </tr>
@@ -177,43 +183,10 @@
                       class="clickable-row"
                       data-href="../arkivskaber-open.html"
                     >
-                      <td>Frederiksberg Pol</td>
                       <td>
                         FRB Politi
                       </td>
-                      <td>1972</td>
-                      <td>1988</td>
-                    </tr>
-                    <tr
-                      class="clickable-row"
-                      data-href="../arkivskaber-open.html"
-                    >
                       <td>Frederiksberg Pol</td>
-                      <td>
-                        FRB Politi
-                      </td>
-                      <td>1972</td>
-                      <td>1988</td>
-                    </tr>
-                    <tr
-                      class="clickable-row"
-                      data-href="../arkivskaber-open.html"
-                    >
-                      <td>Frederiksberg Pol</td>
-                      <td>
-                        FRB Politi
-                      </td>
-                      <td>1972</td>
-                      <td>1988</td>
-                    </tr>
-                    <tr
-                      class="clickable-row"
-                      data-href="../arkivskaber-open.html"
-                    >
-                      <td>Frederiksberg Pol</td>
-                      <td>
-                        FRB Politi
-                      </td>
                       <td>1972</td>
                       <td>1988</td>
                     </tr>
